# cpp-battle-test-server

./: .README.md  CMakeLists.txt  LICENSE.md  README.md
src/: main.cpp
src/Game/: EventManager.hpp  GameEngine.hpp
src/Game/Components/: ActionPointsComponent.hpp  HealthComponent.hpp  MeleeAttackComponent.hpp  MovementComponent.hpp  PositionComponent.hpp  RangedAttackComponent.hpp
src/Game/GameObjects/: Hunter.hpp  Map.hpp  Swordsman.hpp  Unit.hpp
src/Game/Systems/: ActionSystem.hpp  CombatSystem.hpp  HealthSystem.hpp  MovementSystem.hpp
src/IO/Commands/: CommandProcessor.hpp  CreateMap.hpp  ICommand.h  March.hpp  SpawnHunter.hpp  SpawnSwordsman.hpp
src/IO/Events/: IEvent.h  MapCreated.hpp  MarchEnded.hpp  MarchStarted.hpp  UnitAttacked.hpp  UnitDied.hpp  UnitMoved.hpp  UnitSpawned.hpp
src/IO/System/: CommandParser.cpp  EventLog.hpp
